# item-bot

./: .env.example  .gitignore  CONFIG.md  DEPLOYMENT.md  Dockerfile  README.md  bot.py  bot_watcher.py  config.py.example  deploy.sh  dev.sh  docker-compose.yml  format.sh  lint.sh  pyproject.toml  quick_test.py  requirements.txt  run.sh  run_tests.sh  selftest.py
config/: company-config.py  dev-config.py  qa-config.py
