[tool.poetry]
name = "item-bot"
version = "1.0.0"
description = "A Telegram bot for managing shared items (servers, devices, accounts, etc.) in teams"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bot.py"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-telegram-bot = "^22.0"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot:main"
bot-watcher = "bot_watcher:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
] 